--- a/VideoChatSystem.csproj
+++ b/VideoChatSystem.csproj
@@ -10,6 +10,9 @@
     <Content Update="Views\Home\Room.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="wwwroot\css\background.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\js\custom\signalrService.js">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
